--- a/portfolio/class_05/layout01.css
+++ b/portfolio/class_05/layout01.css
@@ -1,23 +1,28 @@
-header,footer {
+*{
+  box-sizing: border-box;
+}
+header,
+footer {
   height: 150px;
+  border: 3px solid black;
+  clear: both;
 }
 
 .box1 {
-  float: left;
   height: 300px;
+  border: 1px solid black;
   width: 33.3333%;
-  border: black solid 1px;
+  float:left;
 }
 .box2 {
-  float: left;
   height: 300px;
-  width: 33%;
-  border: black solid 1px;
+  border: 1px solid black;
+  width: 33.3333%;
+  float:left;
 }
 .box3 {
-  float: left;
   height: 300px;
-  width: 33%;
-  border: black solid 1px;
+  border: 1px solid black;
+  width: 33.3333%;
+  float:left;
 }
-
