--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -7,6 +7,7 @@ li {
 .projects {
   margin: 0 auto;
   width: 80%;
+  border-radius: 10px;
   border: solid rgb(80, 54, 7) 2px;
 }
 
@@ -22,4 +23,10 @@ li {
 
 .custom-counter > li::before {
   content: "Class " counter(step-counter) ": ";
+}
+nav {
+  margin-bottom: 20px;
+  margin: 5px;
+  padding-top: 5px;
+  border-bottom: 1px solid gray;
 }
