--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -28,5 +28,13 @@ nav {
   margin-bottom: 20px;
   margin: 5px;
   padding-top: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   border-bottom: 1px solid gray;
+}
+.nav-links {
+  display: flex;
+  justify-content: space-between;
+  width: 9%;
 }
