--- a/portfolio/class_07/template/index.html
+++ b/portfolio/class_07/template/index.html
@@ -13,6 +13,9 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<h2 id="phone"> 📱</h2>
+		<h2 id="tablet"> you are using a tablet or laptop with small screen</h2>
+		<h2 id="laptop"> 💻</h2>
 <header></header>
 <section></section>
 <section class="big-box"></section>
