class_11 media queries practice

--- a/portfolio/class_11/media-query-practice/css/style.css
+++ b/portfolio/class_11/media-query-practice/css/style.css
@@ -41,9 +41,69 @@ main section, .bottom section{
 /*******************************************/
 
 /* On mobile, please make all sections stack  */
+@media all and (max-width:450px){
 
+  body{
+
+    background-color: yellow;
+  }
+  main section, .bottom section{
+    width: 100%;
+    height: 300px;
+    border: 1px solid black;
+    float: left;
+  }
+  .bottom section{
+    width: 100%;
+  }
+  
+}
 /* On tablet, please make the sections in main stack  */
+@media (min-width: 451px) and (max-width:800px){
+  body{
+    background-color: aqua;
+  }
 
+
+  main section, .bottom section{
+    width: 100%;
+    height: 300px;
+    border: 1px solid black;
+    float: left;
+  }
+  .bottom section{
+    width: 50%;
+  }
+  
+
+}
 /* On laptop, please keep the normal layout, but everything should be light green */
-
+@media (min-width: 801px) and (max-width:1500px){
+  body{
+    background-color: lightgreen;
+  }
+main section, .bottom section{
+  width: 33.3333%;
+  height: 300px;
+  border: 1px solid black;
+  float: left;
+}
+.bottom section{
+  width: 50%;
+}
+}
 /* On larger screens, please keep the normal layout, but everything should be light blue */
+@media (min-width: 1501px){
+  body{
+    background-color: lightblue;
+  }
+main section, .bottom section{
+  width: 33.3333%;
+  height: 300px;
+  border: 1px solid black;
+  float: left;
+}
+.bottom section{
+  width: 50%;
+}
+}
