--- a/portfolio/class_11/layout2/css/style.css
+++ b/portfolio/class_11/layout2/css/style.css
@@ -54,3 +54,16 @@ main > section h1, main > section img{
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+nav ,ul,main,main section:first-child{
+  display: flex;
+  justify-content: space-around;
+  
+}
+
+ul{
+  flex-basis: 30%;
+}
+
+img{
+  width:60%
+}
