--- a/portfolio/class_16/age-checker/css/style.css
+++ b/portfolio/class_16/age-checker/css/style.css
@@ -6,7 +6,9 @@
 *{
   box-sizing: border-box;
 }
-
+h1{
+  cursor: pointer;
+}
 /******************************************
 /* LAYOUT
 /*******************************************/
