--- a/portfolio/class_27/api-template/css/style.css
+++ b/portfolio/class_27/api-template/css/style.css
@@ -13,6 +13,13 @@
 img{
   display: block;
   margin: 0 auto;
+  width :80%;
+}
+iframe{
+  display: block;
+  margin: 0 auto;
+  width :80%;
+  height: 300px;
 }
 
 
