--- a/portfolio/class_28/dnd/css/style.css
+++ b/portfolio/class_28/dnd/css/style.css
@@ -6,6 +6,10 @@
 *{
   box-sizing: border-box;
 }
+body{
+  padding: 10px;
+
+}
 
 /******************************************
 /* LAYOUT
@@ -13,6 +17,7 @@
 img{
   display: block;
   margin: 0 auto;
+  width: 80%;
 }
 
 
